--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="Description" content="Dynamic web development"> 
-    <meta name="Viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Dynamic web development"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> HPMS </title>
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -96,10 +96,7 @@
 
     <footer class="footer">
         <p>&copy; 2024 HIV Prevalence Management System</p>
-    </footer>
-
-
-    
+    </footer>    
 </body>
 
 </html>
