--- a/pages/edu_outreach.html
+++ b/pages/edu_outreach.html
@@ -18,7 +18,7 @@
                 <a href="clinical_visit.html">Clinical Visit</a>
                 <a href="art_prescription.html">ART Prescription</a>
                 <a href="contact_tracing.html">Contact Tracing </a>
-                <a href="educational_outreach.html">Education/Outreach</a>
+                <a href="edu_outreach.html">Education/Outreach</a>
             </div>
         </nav>
     </header>
@@ -40,7 +40,7 @@
             <article class="form-container" >
                 <section style="background-color: rgb(185, 200, 205);">
                 <h2> Educational Outreach </h2>
-                <form id="#" method="post" autocomplete="off" target="_self">
+                <form action="../index.html" method="post" autocomplete="off" target="_self">
                     <div class="form-group">
                     <div>
                         <label for="eventDate">Event Date:</label>
@@ -76,8 +76,8 @@
                      
                 </form>
                 <div class="button-container">
-                    <button type="submit" value="Save & Next"> <a href="edu_outreach.html">Save & Next Event</a></button>
-                    <button type="submit" name="submit">Submit</button>
+                    <button type="submit" value="Save"> Save </a></button>
+                    <button type="submit" name="submit"><a href="edu_outreach.html">Next Event</a></button>
                 </div>
                 </section>
 
