--- a/pages/art_prescription.html
+++ b/pages/art_prescription.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HPMS</title>
     <link rel="stylesheet" href="../css/style.css">
+    <script defer src="../scripts/hpms.js"></script>
 </head>
 
 <body>
@@ -178,142 +179,6 @@
                 </div>
             </article>
 
-            <script>
-                // ART validation form
-                try {
-                    function validateartprescription() {
-                        let isValid = true;
-
-                        const patient_id = document.getElementById('patient_id').value;
-                        const prescription_date = document.getElementById('prescription_date').value;
-                        const currentart_regimen = document.getElementById('currentart_regimen').value;
-                        const dosage = document.getElementById('dosage').value;
-                        const frequency = document.getElementById('frequency').value;
-                        const artstart_date = document.getElementById('artstart_date').value;
-                        const duration = document.getElementById('duration').value;
-                        const refills = document.getElementById('refills').value;
-                        const adherence = document.getElementById('adherence').value;
-                        const side_effects = document.getElementById('side_effects').value;
-                        const drug_interactions = document.getElementById('drug_interactions').value;
-                        const previousart_regimen = document.getElementById('previous_art_regimen').value;
-                        const reason = document.getElementById('reason_for_change').value;
-                        const other_medications = document.getElementById('other_medications').value;
-                        const treatment_notes = document.getElementById('treatment_notes').value;
-                        const follow_up_date = document.getElementById('follow_up_date').value;
-                        const monitoring_plan = document.getElementById('monitoring_plan').value;
-                        const prescriber_name = document.getElementById('prescriber_name').value;
-                        const prescriber_contact = document.getElementById('prescriber_contact').value;
-                        const prescriber_license = document.getElementById('prescriber_license').value;
-
-                        if (!patient_id) {
-                            document.getElementById('patidErr').innerHTML = 'Kindly enter patient id number';
-                            document.getElementById('patient_id').focus();
-                            isValid = false;
-                        } else {
-                            document.getElementById('patidErr').innerHTML = '';
-                        }
-
-                        if (!prescription_date) {
-                            document.getElementById('prescriptiondateErr').innerHTML = 'Kindly enter prescription date';
-                            document.getElementById('prescription_date').focus();
-                            isValid = false;
-                        } else {
-                            document.getElementById('prescriptiondateErr').innerHTML = '';
-                        }
-
-                        if (!currentart_regimen) {
-                            document.getElementById('currentartErr').innerHTML = 'Kindly enter current Art-Regimen';
-                            document.getElementById('currentart_regimen').focus();
-                            isValid = false;
-                        } else {
-                            document.getElementById('currentartErr').innerHTML = '';
-                        }
-
-                        if (!dosage) {
-                            document.getElementById('dosareErr').innerHTML = 'Kindly enter Art Dosage';
-                            document.getElementById('dosage').focus();
-                            isValid = false;
-                        } else {
-                            document.getElementById('dosareErr').innerHTML = '';
-                        }
-
-                        if (!frequency) {
-                            document.getElementById('artfrequencyErr').innerHTML = 'Kindly enter dosage frequency';
-                            document.getElementById('frequency').focus();
-                            isValid = false;
-                        } else {
-                            document.getElementById('artfrequencyErr').innerHTML = '';
-                        }
-
-                        if (!artstart_date) {
-                            document.getElementById('artstartdateErr').innerHTML = 'Kindly indicate Art start date';
-                            document.getElementById('artstart_date').focus();
-                            isValid = false;
-                        } else {
-                            document.getElementById('artstartdateErr').innerHTML = '';
-                        }
-
-                        if (!follow_up_date) {
-                            document.getElementById('followupdateErr').innerHTML = 'Kindly indicate follow-up dates';
-                            document.getElementById('follow_up_date').focus();
-                            isValid = false;
-                        } else {
-                            document.getElementById('followupdateErr').innerHTML = '';
-                        }
-
-                        if (!monitoring_plan) {
-                            document.getElementById('monitoringplaErr').innerHTML = 'Kindly enter monitoring plan for patient';
-                            document.getElementById('monitoring_plan').focus();
-                            isValid = false;
-                        } else {
-                            document.getElementById('monitoringplaErr').innerHTML = '';
-                        }
-
-                        if (!prescriber_name) {
-                            document.getElementById('precribernameErr').innerHTML = 'Kindly enter name of physician';
-                            document.getElementById('prescriber_name').focus();
-                            isValid = false;
-                        } else {
-                            document.getElementById('precribernameErr').innerHTML = '';
-                        }
-
-                        if (!prescriber_contact) {
-                            document.getElementById('prescontantErr').innerHTML = 'Kindly enter physician contact information';
-                            document.getElementById('prescriber_contact').focus();
-                            isValid = false;
-                        } else {
-                            document.getElementById('prescontantErr').innerHTML = '';
-                        }
-
-                        return isValid;
-                    }
-
-                    function validatepatientid() {
-                        const patientidpattern = /^[a-zA-Z0-9\s]*$/;
-                        const patient_id = document.getElementById('patient_id').value;
-
-                        if (!patient_id.match(patientidpattern)) {
-                            document.getElementById('patidErr').innerHTML = 'Kindly enter a valid id number';
-                            document.getElementById('patient_id').focus();
-                            isValid = false;
-                        } else {
-                            document.getElementById('patidErr').innerHTML = '';
-                        }
-                    }
-
-                    function clearError(fieldId, errorId) {
-                        const field = document.getElementById(fieldId);
-                        const errorSpan = document.getElementById(errorId);
-
-                        if (field.value.trim() !== '') {
-                            errorSpan.innerHTML = '';
-                        }
-                    }
-
-                } catch (err) {
-                    window.alert(err.message);
-                }
-            </script>
         </section>
 
         <footer class="footer">
