--- a/pages/patient_registration.html
+++ b/pages/patient_registration.html
@@ -199,194 +199,6 @@
         <p>&copy; 2024 HPMS</p>
     </footer>
 
-    <script>
-        function validatepatientregistration() {
-            var valid = true;
-
-            // Validate uniqueid
-            var uniqueid = document.getElementById("uniqueid").value;
-            if (uniqueid.trim() === "") {
-                document.getElementById("uniqueidErr").textContent = "Please enter Unique-Id";
-                valid = false;
-            } else {
-                document.getElementById("uniqueidErr").textContent = "";
-            }
-
-            // Validate dateEnrolled
-            var dateEnrolled = document.getElementById("dateEnrolled").value;
-            if (dateEnrolled.trim() === "") {
-                document.getElementById("enrollDateErr").textContent = "Please enter Date Enrolled";
-                valid = false;
-            } else {
-                document.getElementById("enrollDateErr").textContent = "";
-            }
-
-            // Validate fullname
-            var fullname = document.getElementById("fullname").value;
-            if (fullname.trim() === "") {
-                document.getElementById("fullnameErr").textContent = "Please enter Full Name";
-                valid = false;
-            } else {
-                document.getElementById("fullnameErr").textContent = "";
-            }
-
-            // Validate dob
-            var dob = document.getElementById("dob").value;
-            if (dob.trim() === "") {
-                document.getElementById("dobErr").textContent = "Please enter Date of Birth";
-                valid = false;
-            } else {
-                document.getElementById("dobErr").textContent = "";
-            }
-
-            // Validate gender
-            var gender = document.getElementById("gender").value;
-            if (gender === "select one") {
-                document.getElementById("genderErr").textContent = "Please select Gender";
-                valid = false;
-            } else {
-                document.getElementById("genderErr").textContent = "";
-            }
-
-            // Validate marital-status
-            var maritalStatus = document.getElementById("marital-status").value;
-            if (maritalStatus === "select one") {
-                document.getElementById("maritalstErr").textContent = "Please select Marital Status";
-                valid = false;
-            } else {
-                document.getElementById("maritalstErr").textContent = "";
-            }
-
-            // Validate address
-            var address = document.getElementById("address").value;
-            if (address.trim() === "") {
-                document.getElementById("addErr").textContent = "Please enter Address";
-                valid = false;
-            } else {
-                document.getElementById("addErr").textContent = "";
-            }
-
-            // Validate phone-no
-            var phoneNo = document.getElementById("phone-no").value;
-            if (phoneNo.trim() === "") {
-                document.getElementById("phoneNoErr").textContent = "Please enter Phone Number";
-                valid = false;
-            } else {
-                document.getElementById("phoneNoErr").textContent = "";
-            }
-
-            // Validate email
-            var email = document.getElementById("email").value;
-            if (email.trim() === "") {
-                document.getElementById("emailAddErr").textContent = "Please enter Email Address";
-                valid = false;
-            } else {
-                document.getElementById("emailAddErr").textContent = "";
-            }
-
-            // Validate nationality
-            var nationality = document.getElementById("nationality").value;
-            if (nationality.trim() === "") {
-                document.getElementById("nationalityErr").textContent = "Please enter Nationality";
-                valid = false;
-            } else {
-                document.getElementById("nationalityErr").textContent = "";
-            }
-
-            // Validate resisdence
-            var resisdence = document.getElementById("resisdence").value;
-            if (resisdence.trim() === "") {
-                document.getElementById("resisdenceErr").textContent = "Please enter resisdence";
-                valid = false;
-            } else {
-                document.getElementById("resisdenceErr").textContent = "";
-            }
-
-             // Validate emergencyContact
-             var emergencyContact = document.getElementById("emergencyContact").value;
-            if (emergencyContact.trim() === "") {
-                document.getElementById("emerContErr").textContent = "Please enter emergencyContact";
-                valid = false;
-            } else {
-                document.getElementById("emerContErr").textContent = "";
-            }
-
-            // Validate nok
-            var nok = document.getElementById("nok").value;
-            if (nok.trim() === "") {
-                document.getElementById("nokErr").textContent = "Please enter nok";
-                valid = false;
-            } else {
-                document.getElementById("nokErr").textContent = "";
-            }
-
-            
-            // Validate nokPhone
-            var nokPhone = document.getElementById("nokPhone").value;
-            if (nokPhone.trim() === "") {
-                document.getElementById("nokPhoneErr").textContent = "Please enter nokPhone";
-                valid = false;
-            } else {
-                document.getElementById("nokPhoneErr").textContent = "";
-            }
-
-            // Validate motherUniueid
-            var motherUniueid = document.getElementById("motherUniueid").value;
-            if (motherUniueid.trim() === "") {
-                document.getElementById("motherUniueidErr").textContent = "Please enter motherUniueid";
-                valid = false;
-            } else {
-                document.getElementById("motherUniueidErr").textContent = "";
-            }
-
-            // Validate art
-            var artYes = document.getElementById("yes").checked;
-            var artNo = document.getElementById("no").checked;
-            if (!artYes && !artNo) {
-                document.getElementById("artErr").textContent = "Please select ART status";
-                valid = false;
-            } else {
-                document.getElementById("artErr").textContent = "";
-            }
-
-            return valid;
-        }
-
-        function clearError(inputId, errorId) {
-            document.getElementById(errorId).textContent = "";
-        }
-
-        function validatepatientuniqueid() {
-            const patientidpattern = /^[a-zA-Z0-9\s]*$/;
-            const uniqueid = document.getElementById('uniqueid').value.trim();
-
-            if (!uniqueid.match(patientidpattern)) {
-                document.getElementById('uniqueidErr').innerHTML = 'Kindly enter a valid ID number';
-                document.getElementById('uniqueid').focus();
-                return false;
-            } else {
-                document.getElementById('uniqueidErr').innerHTML = '';
-                return true;
-            }
-        }
-
-        function validatepatientname() {
-            const namepattern = /^[a-zA-Z\s]*$/;
-            const fullname = document.getElementById('fullname').value.trim();
-
-            if (!fullname.match(namepattern)) {
-                document.getElementById('fullnameErr').innerHTML = 'Kindly enter a valid name pattern (letters and spaces only)';
-                document.getElementById('fullname').focus();
-                return false;
-            } else {
-                document.getElementById('fullnameErr').innerHTML = '';
-                return true;
-            }
-        }
-
-        function validatehivstatus() {
-            // Add custom validation logic for HIV status if needed
-        }
-    </script>
+    <script src="../scripts/hpms.js"></script>
 </body>
 </html>
